--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
@@ -6,14 +5,12 @@ buildscript {
     }
     dependencies {
         classpath 'io.fabric.tools:gradle:1.28.0'
-        classpath 'com.google.gms:google-services:4.3.8'
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
-
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
-
 }
 
 android {
@@ -25,6 +22,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -38,6 +36,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions{
+        pickFirst "androidsupportmultidexversion.txt"
     }
     buildFeatures {
         viewBinding true
@@ -59,11 +60,13 @@ android {
         testImplementation 'junit:junit:4.+'
         androidTestImplementation 'androidx.test.ext:junit:1.1.3'
         androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+        implementation 'com.android.support:multidex:1.0.3'
      }
 }
 dependencies {
-    implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.1'
+    implementation platform('com.google.firebase:firebase-bom:28.3.1')
+    implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -74,5 +77,8 @@ dependencies {
 
     // Dependency for Firebase REaltime Database
     implementation 'com.google.firebase:firebase-database:19.3.1'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
 }
+
+
 
